@@ -1,3 +1,9 @@
+2009-06-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_luv.c: correct return codes from encoderow to be
+	1 on success instead of zero.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2069
+
 2009-06-22  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_lzw.c: Fix buffer underflow bug. 
